01.02.2026 Patterns and Matcher, Processing Strings, Iterator and Iterable fix